--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<div class="inner">
 							<section>
 								<section style="text-align: center;">
-									<img src="images\Profile Pic2.jpg" alt="Profile Picture" style="width: 300px; height: 300px; border-radius: 50%; object-fit: cover;" />
+									<img src="images\Profile Pic2.jpg" alt="Profile Picture" style="width: 400px; height: 400px; border-radius: 50%; object-fit: cover;" />
 								</section>
 								
 							</section>
@@ -168,24 +168,27 @@
 						</div>
 					</section>
 
+			
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">								
-								<li><a href="https://github.com/KJones-Git" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/kylelaurencejones/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li>
-									<a href="https://public.tableau.com/app/profile/kyle.jones8049/vizzes" class="icon solid alt fa-chart-bar">
-									  <span class="label">Tableau</span>
-									</a>
-								  </li>
-								  
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+				<footer id="footer" style="margin-left: 5%; margin-top: 3rem;">
+					<div class="inner">
+						<ul class="icons">								
+							<li><a href="https://github.com/KJones-Git" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/kylelaurencejones/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li>
+								<a href="https://public.tableau.com/app/profile/kyle.jones8049/vizzes" class="icon solid alt fa-chart-bar">
+								<span class="label">Tableau</span>
+								</a>
+							</li>		  
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+				</footer>
+
+
+
 
 			</div>
 
