--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
+										<h3><a href="https://github.com/KJones-Git/World-Wide-Layoffs" class="link">Layoffs Data Cleaning</a></h3>
+										<p><i>SQL, MySQL</i></p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
 										<h3><a href="https://github.com/KJones-Git/US-City-Mobility-Scores" class="link">US Mobility Scores</a></h3>
 										<p><i>Python</i></p>
 									</header>
 								</article>
 								<!-- Save for later<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
