--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/netflix.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/KJones-Git/Netflix_SQL_Project" class="link">Netflix Insights</a></h3>
@@ -69,7 +69,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/chicago_hardship.jpeg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/KJones-Git/Chicago-Hardship-Project" class="link">Chicago Hardship Inference</a></h3>
@@ -78,7 +78,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/big_mac_index_pic.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/KJones-Git/Big_Mac_Index" class="link">Big Mac Index</a></h3>
@@ -87,7 +87,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/layoffs.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/KJones-Git/World-Wide-Layoffs" class="link">Layoffs Data Cleaning</a></h3>
@@ -96,7 +96,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/mobility.jpeg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/KJones-Git/US-City-Mobility-Scores" class="link">US Mobility Scores</a></h3>
