--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/chicago_hardship.jpeg" alt="" />
+										<img src="images/inventory_management.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/KJones-Git/Chicago-Hardship-Project" class="link">Chicago Hardship Inference</a></h3>
-										<p><i>Python, ML</i></p>
+										<h3><a href="https://github.com/KJones-Git/ABC_XYZ_Inventory_Management" class="link">ABC XYZ Inventory Analysis</a></h3>
+										<p><i>SQL, MySQL, Excel</i></p>
 									</header>
 								</article>
 								<article>
@@ -103,13 +103,13 @@
 										<p><i>Python</i></p>
 									</header>
 								</article>
-								<!-- Save for later<article>
+								<article>
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/chicago_hardship.jpeg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="https://github.com/KJones-Git/Chicago-Hardship-Project" class="link">Chicago Hardship Inference</a></h3>
+										<p><i>Python, ML</i></p>
 									</header>
 								</article>
 							</section> -->
